css/style.css
/* Basic reset */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body {
    font-family: Roboto, Arial;
    background: url(../images/diu.jpg) no-repeat left/cover fixed;
}

/* Popup for mobile users */
/* .popup {
    display: none;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.8);
    z-index: 1000;
}

.popup-content {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 90%;
    border-radius: 1cap;
    transform: translate(-50%, -50%);
    background-color: #fff;
    padding: 20px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    text-align: center;
}
.popup-content p #i {
    margin-left: 30px;
}
.popup-content p {
    margin: 10px 0 10px 0;
}
/* --------------------------- */
.main, .docs {
    display: grid;
    grid-template-columns: 2fr 3fr 2fr; 
}

.docs-mid {
    background-color: rgba(0, 0, 0, 0.8);
    color: #fff;
    font-size: 30px;
    text-align: center;
    padding: 1rem;
    border-radius: 1cap;
    margin-bottom: 20px;
}
/* --------------------------- */
/* .popup-content button {
    margin-top: 10px;
    padding: 10px 30px;
    background-color: #28a745;
    color: #fff;
    border: none;
    cursor: pointer;
    border-radius: 5px;
}

.popup-content button:hover {
    background-color: #28a745;
}  */
/* popup design end */

html {
    scroll-behavior: smooth;
    scroll-padding-top: 80px;
}

/* Navigation Bar design */
.header {
    display: grid;
    grid-template-columns: 2fr 3fr 2fr;
    position: fixed;
    left: 0;
    right: 0;
}

.header-mid {
    background-color: rgba(0, 0, 0, 0.8);
    padding: 1rem;
    border-radius: 1.5cap;
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
    z-index: 100;
}
.nav-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.nav-logo {
    display: flex;
    justify-self: start;
    align-items: center;
}
.nav-logo a {
    color: #ffffff;
    font-weight: 700;
    font-size: 30px;
}
.nav-icon {
    height: 50px;
    margin-right: 10px;
}
.nav-button {
    position: relative;
}
.dropdown {
    display: inline-block;
    position: relative;
}
.dropdown button {
    background-color: rgba(0, 0, 0, 0.6);
    font-size: 16px;
    width: 160px;
    color: white;
    padding: 16px 26px 16px 26px ;
    border: none;
    border-radius: 10px;
    cursor: pointer;
}
/* .dropdown-content {
    margin: auto;
    display: none;
    position: absolute;
    background-color: #f1f1f1;
    border-radius: 10px;
    min-width: 150px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 150;
}
.dropdown-content a {
    color: black;
    padding: 12px;
    padding-left: 18px;
    text-decoration: none;
    display: block;
} */
.dropdown button:hover {
    background-color: rgba(0, 0, 0);
}
/* .dropdown-content a:hover {
    background-color: #ddd;
    border-radius: 10px;
} */
.dropdown:hover .dropdown-content {
    display: block;
}
/* Nav design end */

/*----------------------------- */
.icon-section {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    background-color: rgba(0, 0, 0, 0.6);
    margin: 30px 0px;
    padding: 40px;
    gap: 40px;
    border-radius: 20px;
    margin-top: 100px;
}
.icon-section h1 {
    text-align: center;
    border-bottom: #ffffff 3px solid;
    font-size: 40px;
    font-weight: 600;
    color: #ffffff;
}
.icon-box {
    background-color: #28a745;
    text-align: center;
    align-items: center;
    justify-items: center;
    padding: 80px 0px;
    height: 200px;
    border-radius: 20px;
    cursor: pointer;
    transition: 0.4s;
} 
.icon-section a {
    font-size: 30px;
    font-weight: bold;
    text-decoration: none;
    color: #ffffff;
}
.icon-section a span {
    padding-left: 10px;
}
/*----------------------------- */

/* Suggestion Text Styling */
.suggestion-text {
    background: rgba(0, 0, 0, 0.8);
    color: #ffffff;
    border-radius: 1cap;
    margin-top: 20px;
    padding: 10px;
    line-height: 25px;
    text-align: center;
    font-size: 14px;
    margin-top: 100px;
}
/* Green Highlight */
.highlight-green {
    color: rgb(61, 204, 61);
}

/* Red Highlight */
.highlight-red {
    color: rgb(252, 38, 38);
}

/* ------------------------ */

/* Form Designing */
.form-container {
    margin-top: 20px;
}
.form {
    background-color: rgba(0, 0, 0, 0.6);
    border-radius: 20px;
    color: white;
    padding: 40px;
    display: flex;
    flex-direction: column;
}
.form h1 {
    margin-bottom: 15px;
    font-size: 30px;
}
.form-group{
    margin-bottom: 10px;
}
.form-logo img{
    width: 100%;
}
.category-head-text {
    padding: 15px;
    font-size: 30px;
    font-weight: 600;
}
label{
    font-size: 18px;
}
input{
    margin-top: 5px;
    margin-bottom: 5px;
    width: 100%;
    padding: 15px;
    border: none ;
    border-radius: 18px;
    font-size: 18px;
    color: #ffffff;
    background-color: rgba(202, 202, 202, 0.4); 
}
.head-text{
    text-align: center;
}
::placeholder{
    color: #cecece;
}

input:hover {
    background-color: rgba(170, 170, 170, 0.7);
}


/* Button styling */
.submit {
    margin: auto;
    display: block;
    width: 180px;
    padding: 10px;
    background-color: #28a745;
    border: none;
    border-radius: 16px;
    color: white;
    font-size: 18px;
    cursor: pointer;
    
}

.submit:hover,.download:hover,.image:hover, .docx:hover , .edit:hover ,.icon-box:hover {
    background-color: #ffffff;
    color: #000000;
    opacity: .9;
    transition-duration: 0.4s;
}
.submit:hover:active,.download:hover:active,.image:hover:active, .docx:hover:active , .edit:hover:active, .icon-box:hover:active {
    background-color: #28a745;
    color: #ffffff;
    opacity: .9;
    transition-duration: 0.2s;
}
/* Form design ends  */
/* Document Design */

.document-holder {
    display: flex;
    justify-content: center;
    margin-bottom: 100px;    
}
/* ... */

